@@ -3,14 +3,14 @@ package net.farkas.wildaside.util;
 import org.joml.Math;
 
 public class GlowingHickoryLightUtil {
-    public static int getLight(int time, int minLight   , int maxLight) {
+    public static int getLight(int time, int minLight, int maxLight) {
         int newLight = 0;
 
         if (time > 22000) {
-            newLight = org.joml.Math.round(maxLight - (maxLight * ((time - 22000f) / 2000f)));
+            newLight = Math.round(maxLight - (maxLight * ((time - 22000f) / 2000f)));
         } else
         if (time > 12000 && time < 14000) {
-            newLight = org.joml.Math.round(maxLight * ((time - 12000f) / 2000f));
+            newLight = Math.round(maxLight * ((time - 12000f) / 2000f));
         } else
         if (time > 14000) {
             newLight = maxLight;
@@ -19,8 +19,6 @@ public class GlowingHickoryLightUtil {
             newLight = minLight;
         }
 
-        newLight = Math.min(Math.max(0, newLight), 7);
-
-        return newLight;
+        return Math.clamp(minLight, maxLight, newLight);
     }
 }
